tests/toylang/neg/001137_mutation.toylang
program a = { if then a then sleep; } .
